--- a/计算机组成原理/docs/ch05/指令寻址.md
+++ b/计算机组成原理/docs/ch05/指令寻址.md
@@ -80,7 +80,7 @@
 
     由于两者的应用场合不同，因此从本质来认识，它们还是有较大的区别。基址寻址主要 用于为程序或数据分配存储空间, 故基址奇存器的内容通常由操作系统或管理程序确定，在程序的执行过程中其值是不可变的，而指令字中的A 是可变的。
 
-    在变址寻址中，变址寄存器的内容 是 由 用 户 设 定 的 ，在 程 序 执 行 过 程 中 其 值 可 变 ， 而 指 令 字 中 的 A 是 不 可 变 的 。 变 址 寻 址 主 要 用 于 处 理 数 组 问 题 ， 在 数 组 处 理 过 程 中 ，可 设 定 A 为 数 组 的 首 地 址 ，不 断 改 变 变 址 寄 存 器 IX 的 内 容,便可很容易形成数组中任 一数据的地址，特别适合编制循环程序。
+    在变址寻址中，变址寄存器的内容 是 由 用 户 设 定 的 ，在 程 序 执 行 过 程 中 其 值 可 变 ， 而 指 令 字 中 的 A 是 不 可 变 的 。 变 址 寻 址指 主 要 用 于 处 理 数 组 问 题 ， 在 数 组 处 理 过 程 中 ，可 设 定 A 为 数 组 的 首 地 址 ，不 断 改 变 变 址 寄 存 器 IX 的 内 容,便可很容易形成数组中任 一数据的地址，特别适合编制循环程序。
 
 
 
