--- a/计算机网络/L2数据链路层/应用.md
+++ b/计算机网络/L2数据链路层/应用.md
@@ -11,10 +11,25 @@
 
 ## 以太网 MAC 帧
 以太网规定最短帧长为64B
+┌────────┬────────┬────────┬───────┬───────────────┬────────────------──┐
+│ 前导码  │ 帧起始  │ 目标MAC│ 源MAC │ 类型/长度字段  │ 数据              │ CRC    │
+│ 7字节    │ 1字节     │ 6字节    │ 6字节 │ 2字节                   │46~1500字节│ 4字节 │
+└────────┴────────┴────────┴───────┴───────────────┴────────────────-──┘
+
 ![](https://lfool.gitbook.io/~gitbook/image?url=https%3A%2F%2F2396550738-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-M8zvqNNVZctOHx6v8No%252F-MDnQzTlVcIHDeKoqDZe%252F-MDnamdU8bPY4gdbahXw%252Fimage.png%3Falt%3Dmedia%26token%3D2922dc46-ce39-4dc6-8e75-064c4427a856&width=400&dpr=3&quality=100&sign=ee0ec359&sv=2)
 
-## IEEE 802.11 无线局域网
+## 🌐 IEEE 802.11无线局域网
 ![](https://lfool.gitbook.io/~gitbook/image?url=https%3A%2F%2F2396550738-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-M8zvqNNVZctOHx6v8No%252F-MDndB5oIJYnV9SNowhP%252F-MDo17XYPp8lxDa7-_et%252Fimage.png%3Falt%3Dmedia%26token%3Df7e730bc-a665-4a06-b338-5a1e9da5de9b&width=400&dpr=3&quality=100&sign=1ed6ec0c&sv=2)
+
+### 基础服务集（BSS）
+
+- 最基本的结构单位，包括一个无线接入点（AP）和多个终端（STA）
+- 有两种类型：
+    - **基础型 BSS（Infrastructure BSS）**：包含 AP（常见）
+    - **独立型 BSS（IBSS）**：无 AP，称为 Ad-hoc 模式（对等通信）
+### 扩展服务集（ESS）
+- 由多个 BSS 和一个分布式系统（DS）组成
+- 允许终端在不同的 AP 之间切换（漫游）
 
 ## VLAN
 802.3ac标准定义了支持VLAN的以太网帧格式的扩展。它在以太网帧中插入一个4字节的标识符(插在源地址字段和类型字段之间),称为VLAN标签,用来指明发送该帧的计算机属于哪个虚拟局域网。插入VLAN标签的帧称为802.1Q帧,如图3.30所示。
