--- a/数据结构/堆.md
+++ b/数据结构/堆.md
@@ -1,1 +1,40 @@
-堆是一棵树，其每个节点都有一个键值，且每个节点的键值都大于等于/小于等于其父亲的键值。
+堆是一棵[完全二叉树](https://zh.wikipedia.org/wiki/%E5%AE%8C%E5%85%A8%E4%BA%8C%E5%8F%89%E6%A0%91 "完全二叉树")，其每个节点都有一个键值，且每个节点的键值都大于等于/小于等于其父亲的键值。
+
+将根节点最大的堆叫做**最大堆**或**大根堆**，根节点最小的堆叫做**最小堆**或**小根堆**。
+
+```c  
+void heapify(int arr[], int n, int i) {  
+	int smallest = i;  
+	int l = 2*i + 1;  
+	int r = 2*i + 2;  
+	if (l < n && arr[l] < arr[smallest])  
+		smallest = l;  
+	if (r < n && arr[r] < arr[smallest])  
+		smallest = r;  
+	if (smallest != i) {  
+		swap(a[i],a[smallest]); 
+		heapify(arr, n, smallest);  
+	}  
+}
+
+void build_heap(int arr[], int n) {  
+	for (int i = n/2 - 1; i >= 0; i--) {  
+		heapify(arr, n, i);  
+	}  
+}  
+// 上浮
+void siftUp(int arr[], int i) {
+    while (i > 0 && arr[(i - 1) / 2] > arr[i]) {
+        swap(arr[i], arr[(i - 1) / 2]);
+        i = (i - 1) / 2;
+    }
+}
+
+// 插入函数
+void insert(int arr[], int n, int key) {
+	
+    arr[n] = key;   // 插入到最后
+    siftUp(arr, n); // 向上调整
+    n++;            // 元素数量增加
+}
+```
