--- a/数据结构/排序.md
+++ b/数据结构/排序.md
@@ -71,6 +71,28 @@ void insertion_sort(int arr[], int n)
 ```
 复杂度同 选择
 
+# 希尔排序
+希尔排序是简单插入排序经过改进之后的一个更高效的版本，也称为缩小增量排序
+```c
+void shellSort(int arr[], int n) {
+    // 开始时 gap 为数组长度的一半，逐步减小到 1
+    for (int gap = n / 2; gap > 0; gap /= 2) {
+        // 对每个子序列进行插入排序
+        for (int i = gap; i < n; i++) {
+            int temp = arr[i];   // 当前元素
+            int j = i;
+
+            // 插入排序部分：向前查找合适位置
+            while (j >= gap && arr[j - gap] > temp) {
+                arr[j] = arr[j - gap];
+                j -= gap;
+            }
+
+            arr[j] = temp;       // 插入到正确位置
+        }
+    }
+}
+```
 # 快速排序
 ```c
 int partition(int arr[], int left, int right)
@@ -136,3 +158,19 @@ void merge_sort(int arr[], int left, int right)
 时间 nlogn
 空间 n
 稳定
+
+# 堆排序
+
+**求升序**用大顶堆，**求降序**用小顶堆。
+
+```c
+void heapSort(int arr[], int n) {
+    buildMaxHeap(arr, n);
+
+    // 每次取出堆顶元素放到最后
+    for (int i = n - 1; i > 0; i--) {
+        swap(arr[0], arr[i]);         // 把当前最大值放到末尾
+        heapify(arr, i, 0);           // 对剩下的 i 个元素重新 heapify
+    }
+}
+```
