--- a/计算机网络/L2数据链路层/三个重要问题.md
+++ b/计算机网络/L2数据链路层/三个重要问题.md
@@ -39,7 +39,7 @@ FCS 帧检验序列计算方式：
 ![](https://lfool.gitbook.io/~gitbook/image?url=https%3A%2F%2F2396550738-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-M8zvqNNVZctOHx6v8No%252F-MDeAuDC54slM3K_4HvC%252F-MDeDRia8ikWzadJeEnh%252Fimage.png%3Falt%3Dmedia%26token%3D79cb1acc-3ddf-4316-b334-d8876df1c369&width=678&dpr=2&quality=100&sign=4dc19715&sv=2)
 3. 接收方检验
 ![](https://lfool.gitbook.io/~gitbook/image?url=https%3A%2F%2F2396550738-files.gitbook.io%2F%7E%2Ffiles%2Fv0%2Fb%2Fgitbook-legacy-files%2Fo%2Fassets%252F-M8zvqNNVZctOHx6v8No%252F-MDeAuDC54slM3K_4HvC%252F-MDeENYdYxuS4mznMcpo%252Fimage.png%3Falt%3Dmedia%26token%3D0de5ca06-9b90-4b31-8c24-cf3f411dd6d6&width=300&dpr=2&quality=100&sign=443b448e&sv=2)
-
+[[CRC码]]
 ### 海明码(待填的坑)
 当需要检查出 d 为错误，需要码距为 d + 1；当需要纠正 d 为错误，需要码距为 2d + 1
 
